navegator and whyuseapp page

--- a/view/login.html
+++ b/view/login.html
@@ -23,7 +23,7 @@
                 <label>Password</label>
             </div>
             <span class="text-right"> <a class="link" href="./registration.html"> Free registration! </a></span>
-            <!-- <span class="text-right"> <a class="link" href="" > forgot my password </a> </span> -->
+            <span class="text-right"> <a class="link" href="../" > return to home page </a> </span>
 
             <button type="submit" class="btn-form">submit</button>
         </form>
