--- a/view/login.html
+++ b/view/login.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/form.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Login</title>
 </head>
 <body>
-
+    <div class="container">
     <div class="formBox">
         <form action="../controller/login.php" method="POST">
             <div class="login-title">
@@ -22,11 +23,15 @@
                 <input name="password" type="password" required/>
                 <label>Password</label>
             </div>
-            <span class="text-right"> <a class="link" href="./registration.html"> Free registration! </a></span>
-            <span class="text-right"> <a class="link" href="../" > return to home page </a> </span>
-
+            <div class="text-right"> 
+                <a class="link" href="./registration.html">
+                     Free registration! 
+                </a>
+            </div>
             <button type="submit" class="btn-form">submit</button>
         </form>
+    </div>
+        <a class="btn btn-dark" href="../">Return home page</a>
     </div>
     
 </body>
