--- a/view/registration.html
+++ b/view/registration.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/form.css">
     <title>Registratation</title>
 </head>
 <body>
+<div class="container">
     <div class="formBox">
         <form action="../controller/registration.php" method="POST">
-        <div class="formFormat">
+        <div class="formFormat register-format">
             <div class="centalBox">
                 <h2>REGISTER</h2>
             </div>
@@ -33,13 +35,19 @@
                 <label>Mail</label>
                 <input name="mail" type="email" required/>
             </div>
-            <span class="text-right"><a href="./login.html" class="link">GO TO LOGIN</a></span>
+            <div class="text-right link-login-register">
+                <a href="./login.html" class="link">
+                    GO TO LOGIN
+                </a>
+            </div>
             <div class="centalBox">
                 <button type="submit">submit</button>
             </div>
         </div>
         </form>
     </div>
+    <a class="btn btn-dark" href="../">Return home page</a>
+</div>
 
 
 </body>
