cambio estetica login/registro

--- a/view/login.html
+++ b/view/login.html
@@ -18,7 +18,7 @@
             </div>
             <div class="input-container">
                 <input name="username" type="text" required=""/>
-                <label>Username</label>		
+                <label>Username/Mail</label>		
             </div>
             <div class="input-container">		
                 <input name="password" type="password" required/>
