--- a/view/login.html
+++ b/view/login.html
@@ -9,7 +9,7 @@
     <title>Login</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
     <div class="formBox">
         <form action="../controller/login.php" method="POST">
             <div class="login-title">
