--- a/view/registration.html
+++ b/view/registration.html
@@ -9,7 +9,7 @@
     <title>Registratation</title>
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
     <div class="formBox">
         <form action="../controller/registration.php" method="POST">
         <div class="formFormat register-format">
