--- a/view/login.html
+++ b/view/login.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <div class="container-fluid">
+    <main>
+    <a class="btn btn-dark btn-return-home" href="../">Return home page</a>
     <div class="formBox">
         <form action="../controller/login.php" method="POST">
             <div class="login-title">
@@ -18,7 +20,7 @@
             </div>
             <div class="input-container">
                 <input name="username" type="text" required=""/>
-                <label>Username/Mail</label>		
+                <label>Mail/Username</label>		
             </div>
             <div class="input-container">		
                 <input name="password" type="password" required/>
@@ -26,14 +28,13 @@
             </div>
             <div class="text-right"> 
                 <a class="link" href="./registration.html">
-                     Free registration! 
+                    Free registration! 
                 </a>
             </div>
             <button type="submit" class="btn-form">submit</button>
         </form>
     </div>
-        <a class="btn btn-dark" href="../">Return home page</a>
+    </main>
     </div>
-    
 </body>
 </html>
