--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,6 @@ header{
     left: 0;
     right: 0;
     z-index: 10;
-    /* background-color: tomato; */
 }
 .other-submenu,
 .btn-menu{
@@ -222,6 +221,14 @@ main figure img{
     width: 70%;
     margin: 0 auto;
 }
+
+.nav-profile{
+    position: absolute;
+    width: 100%;
+    height: 20vh;
+    top: 15vh;
+}
+
 .form{
     color: white;
     height: 450px;
