--- a/view/registration.html
+++ b/view/registration.html
@@ -12,43 +12,44 @@
     <div class="container-fluid">
     <main>
     <a class="btn btn-dark btn-return-home" href="../">Return home page</a>
-        <div class="formBox">
+        <div class="formBoxRegister">
             <form action="../controller/registration.php" method="POST">
                 <div class="formFormat register-format">
-                    <div class="centalBox">
+                    <div class="text-center">
                         <h2>REGISTER</h2>
                     </div>
                     <div class="input-container-register">
+                        <input name="firstName" type="text" required/>
                         <label>First name</label>
-                <input name="firstName" type="text" required/>
-            </div>
-            <div class="input-container-register">
-                <label>Last name</label>
-                <input name="lastName" type="text" required/>
-            </div>
-            <div class="input-container-register">
-                <label>Username</label>
-                <input name="username" type="text" required=""/>
-            </div>
-            <div class="input-container-register">
-                <label>Password</label>
-                <input name="password" type="password" required/>
-            </div>
-            <div class="input-container-register">
-                <label>Mail</label>
-                <input name="mail" type="email" required/>
-            </div>
-            <div class="text-right link-login-register">
-                <a href="./login.html" class="link">
-                    GO TO LOGIN
-                </a>
-            </div>
-            <div class="centalBox">
-                <button type="submit">submit</button>
-            </div>
-        </form>
-    </div>
-</main>
+                    </div>
+                    <div class="input-container-register">
+                        <input name="lastName" type="text" required/>
+                        <label>Last name</label>
+                    </div>
+                    <div class="input-container-register">
+                        <input name="username" type="text" required=""/>
+                        <label>Username</label>
+                    </div>
+                    <div class="input-container-register">
+                        <input name="password" type="password" required/>
+                        <label>Password</label>
+                    </div>
+                    <div class="input-container-register">
+                        <input name="mail" type="email" required/>
+                        <label>Mail</label>
+                    </div>
+                    <div class="text-right link-login-register">
+                        <a href="./login.html" class="link">
+                            GO TO LOGIN
+                        </a>
+                    </div>
+                    <div class="btn-submit">
+                        <button type="submit">submit</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </main>
 </div>
 
 </body>
