--- a/view/login.html
+++ b/view/login.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
     <main>
     <a class="btn btn-dark btn-return-home" href="../">Return home page</a>
-    <div class="formBox">
+    <div class="formBoxLogin">
         <form action="../controller/login.php" method="POST">
             <div class="login-title">
                 <span class="text-login">LOGIN</span>
