--- a/view/landingPage/formTask.html
+++ b/view/landingPage/formTask.html
@@ -1,27 +1,33 @@
-<div class="mt-4">
-    <form action="./services/addTask.php" method="POST">
-        <div class="d-flex flex-column mb-5">
+<form action="./services/addTask.php" method="POST">
+    <div>
+        <div class="input-container-addTask">
+            <label for="task">Task</label>
+            <textarea required placeholder="Write something here" name = "task" id="task" type="text"></textarea>
+        </div>
+        
+        <div class="input-container-addTask">
+            <label for="state">State</label>
+                <select name="state">
+                    <option value="In progress">In progress</option>
+                    <option value="At risk">At risk</option>
+                    <option value="Delayed">Delayed</option>
+                </select>
+        </div>
 
-            <label for="tast">Task</label>
-            <textarea required placeholder="Write something here" rows="3" cols="30" name = "task" id="task" type="text"></textarea>
-            
-            <label class="mt-3" for="state">State</label>
-            <select name="state">
-                <option value="In progress">In progress</option>
-                <option value="At risk">At risk</option>
-                <option value="Delayed">Delayed</option>
-            </select>
-
-            <label class="mt-3" for="priority">Priority</label>
+        <div class="input-container-addTask">    
+            <label for="priority">Priority</label>
             <select name="priority">
                 <option value="Low">Low</option>
                 <option value="Medium">Medium</option>
                 <option value="High">High</option>
             </select>
-            <label class="mt-3" for="deadline">Deadline</label>
-            <input class="mb-4" type="date" name="deadline" required>
-            
-            <button class="btn btn-dark mb-4" type="submit">Add task</button>
         </div>
-        </form>
+        <div class="input-container-addTask">
+            <label for="deadline">Deadline</label>
+            <input type="date" name="deadline" required>
+        </div>
+        <div class="input-container-addTask btn-submit">
+            <button class="btn" type="submit">Add task</button>
+        </div>
     </div>
+</form>
