--- a/style/form.css
+++ b/style/form.css
@@ -133,9 +133,11 @@ outline-color: transparent;
 }
 
 .btn-submit{
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 50;
 }
 .btn-submit button{
     color:#fff;
@@ -163,24 +165,33 @@ outline-color: transparent;
     color: white;
     background-color: rgb(18, 109, 245);
     font-size: 3vh;
-    z-index: 15;
     transition: left 1s;
+    z-index: 20;
 }
 
 .btn-add-task-form{
     position: fixed;
     top:2%;
     left: 5%;
-    z-index: 16;
+    z-index: 4;
 }
 main .btn-add-task-form:focus ~ .formBoxTask{
     left: 5%;
 }
+main .btn-add-task-form:focus{
+    background-color: rgb(18, 109, 245);
 
+}
+main .formBoxTask:focus-within{
+    position: fixed;
+    left: 5%;
+    z-index: 5;
+}
 .input-container-addTask{
     width: 100%;
     height: 20%;
     padding: 1vh 5%;
+
 }
 .input-container-addTask textarea,
 .input-container-addTask select,
