--- a/style/style.css
+++ b/style/style.css
@@ -14,7 +14,7 @@ main{
     top: 0;
     bottom: 0;
     overflow: auto;
-    z-index: 1;
+    z-index: 2;
 }
 main figure{
     position: relative;
@@ -30,18 +30,18 @@ main figure img{
 header{
     position: fixed;
     height: 35vh;
-    top: 65vh;
+    top: 90vh;
     width: 100vw;
     left: 0;
     right: 0;
-    z-index: 10;
+    z-index: 3;
+    background-color: indianred;
 }
 .other-submenu,
 .btn-menu{
     position: absolute;
-    top:27vh;
+    top: 2vh;
     transition: top 1s;
-    z-index: 1;
 }
 .other-submenu{
     right: 5vw;
@@ -52,26 +52,28 @@ header{
 .btn-menu{
     left: 5vw;
 }
+
 .navegbar{
     position: absolute;
     width: 100vw;
     height: 25vh;
     top: 35vh;
     transition: top 1s;
+    z-index: 3;
 }
 .navegbar:focus{
     top: 0vh;
 }
 .btn-menu:focus {
     background-color: blueviolet;
-    top: 2vh;
+    top: -25vh;
 }
 header div .btn-menu:focus ~ .navegbar{
-    top: 10vh;
+    top: -15vh;
     z-index: 5;
 }
 header div .btn-menu:focus ~ .other-submenu{
-    top: 2vh;
+    top: -25vh;
 }
 .navegbar li a{
     color: white;
@@ -84,6 +86,7 @@ ul{
     padding: 0;
 }
 ul li button{
+    position: relative;
     list-style: none;
     border: 1px solid gray;
     width: 100%;
@@ -93,6 +96,12 @@ ul li button{
     align-items: center;
     margin: 0;
     padding: 0;
+    z-index: 5;
+}
+
+ul li{
+    position: relative;
+    z-index:inherit;
 }
 
  /* homestyle */
@@ -220,15 +229,25 @@ ul li button{
     margin: 0 auto;
 }
 
+.headerProfile{
+    position: fixed;
+    height: 20vh;
+    top: 80vh;
+    width: 100vw;
+    left: 0;
+    right: 0;
+    z-index: 4;
+}
+
 .nav-profile{
     position: absolute;
     width: 100%;
     height: 20vh;
-    top: 15vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    z-index: 3;
 }
 .nav-profile div {
     width: 35vw;
@@ -243,13 +262,19 @@ ul li button{
     color: white;
 }
 
+.btn-delete{
+    position: relative;
+    z-index: 11;
+}
+
 .tasksBox{
-    position: absolute;
+    position: relative;
     overflow: scroll;
+    top:10vh;
     width: 100%;
-    height: 80vh;
-    z-index: 14;
-    top: 10%;
+    height: 70vh;
+    z-index: 4;
+    background-color: lawngreen;
 }
 
 .listTask{
