--- a/style/style.css
+++ b/style/style.css
@@ -35,7 +35,6 @@ header{
     left: 0;
     right: 0;
     z-index: 3;
-    background-color: indianred;
 }
 .other-submenu,
 .btn-menu{
@@ -261,42 +260,112 @@ ul li{
     text-align: center;
     color: white;
 }
-
-.btn-delete{
-    position: relative;
-    z-index: 11;
-}
-
 .tasksBox{
     position: relative;
     overflow: scroll;
     top:10vh;
-    width: 100%;
+    margin: 0 auto;
+    width: 85%;
     height: 70vh;
     z-index: 4;
-    background-color: lawngreen;
+    overflow:auto;
+}
+.tasksBox h2{
+    font-size: 4vh;
+    text-align: center;
 }
 
-.listTask{
-    position: relative;
-    top: 10%;
-
+.tasksBox div{
+    margin: 5vh 0;
 }
-.taskRow{
-    position: relative;
+
+#tableTask,
+#tableTask td,
+#tableTask th{
+    border: 1px solid lightsteelblue;
     width: 100%;
-    margin: 0px;
+    height: 50px;
+}
+#tableTask th {
+    padding: 0px 5px;
+    text-align: center;
+    background-color: rgb(18, 109, 245);
+    color: white;
+}
+#tableTask td {
+    padding: 10px;
+    text-align: left;
+}
+#tableTask tr{
+    background-color: rgb(208, 236, 246);
 }
 
-/* .taskIndividualBox{
-    width: 180px;
-    overflow: auto;
-} */
+#tableTask tr:nth-child(even) {
+    background-color: skyblue;
+}
+.btn-edit,
+.btn-delete,
+.btn-details{
+    background-color:rgb(18, 109, 245);
+}
+
+#tableTask tr .btn-delete:active{
+    background-color: rgb(248, 56, 38);
+
+}
+#tableTask tr .btn-edit:active{
+    background-color: rgb(241, 241, 82);
+
+}
+#tableTask tr .btn-details:focus{
+    background-color: rgb(20, 197, 64);
+}
+#tableTask tr button a{
+    color:white;
+}
+#tableTask thead .theadLarge,
+#tableTask tbody .tbodyLarge{
+    display: none;
+}
+#tableTask tbody .tbodySmall td div{
+    display: none;
+}
+#tableTask tbody .tbodySmall td .btn-details:focus ~ div{
+    display: flex;
+}
+#tableTask tbody .tbodySmall td{
+    position: relative;
+}
+.details{
+    position: absolute;
+    width: 90vh;
+    height: 40vh;
+    top: 35%;
+    left: -50vw;
+    z-index: 6;
+    background-color: rgb(18, 109, 245);
+    display: grid;
+    grid-template-columns: 70% 30%;
+}
+.details div{
+    background-color: chartreuse;
+}
+
 
 @media only screen and (min-width: 480px){
     .navegbar li a{
         color: red;
         font-size: 3vh;
+    }
+
+    #tableTask thead .theadLarge,
+    #tableTask tbody .tbodyLarge{
+        display: table-row;
+    }
+
+    #tableTask thead .theadSmall,
+    #tableTask tbody .tbodySmall{
+        display: none;
     }
 }
 
