--- a/style/style.css
+++ b/style/style.css
@@ -257,7 +257,7 @@ ul li{
     top:10vh;
     margin: 0 auto;
     width: 85%;
-    height: 70vh;
+    height: 69.5vh;
     z-index: 20;
     overflow:auto;
 }
@@ -296,6 +296,15 @@ ul li{
     display: block;
     color: white;
     background-color:rgb(18, 109, 245);
+    width: 73px;
+    height: 38px;
+}
+.btn-details{
+    z-index: 30;
+}
+.btn-edit,
+.btn-delete{
+    z-index: 40;
 }
 #tableTask tr .btn-delete:active{
     background-color: rgb(248, 56, 38);
@@ -318,28 +327,36 @@ ul li{
 #tableTask tbody .tbodySmall td{
     position: relative;
 }
-.details{
-    display: none;
+.detailsBox{
+    display: grid;
+    visibility: hidden;
     position: absolute;
+    padding: 2vh 5vw;
     width: 85vw;
-    top: 7vh;
+    top: 8vh;
     right:0vw;
     border-radius: 5px;
     background-color: rgb(18, 109, 245);
     grid-template-columns: 70% 30%;
-    row-gap: 1vh;
-    z-index: 45;
+    row-gap: 2vh;
+    z-index: 35;
+    transition: all 0s;
+    transition-delay: 0.1s;
 }
-.details .btn-centered{
+.detailsBox .btn-centered{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.details .btn-centered button{
+.detailsBox .btn-centered button{
     background-color: #011BEB;
 }
-#tableTask tbody .tbodySmall td .btn-details:focus + .details{
-    display: grid;
+#tableTask tbody .tbodySmall td .btn-details:focus + .detailsBox{
+    visibility: visible;
+}
+.taskTable{
+    position: relative;
+    overflow: hidden;
 }
 @media only screen and (min-width: 480px){
     .navegbar li a{
